# aabw-2026

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  GLOSSARY.md  Makefile  Procfile  README.md  pyproject.toml  render.yaml  start_server.sh  test_e2e.sh
backend/: README.md  assistant_service.py  assistant_store.py  auth.py  calibration_service.py  calibration_store.py  checkpoint_rerun_service.py  checkpoint_rerun_store.py  config.py  export_openapi.py  job_store.py  llm_client.py  llm_probe.py  mapping_session_service.py  mapping_session_store.py  models.py  orchestration_service.py  orchestration_store.py  queue_manager.py  review_service.py  review_store.py  routes.py  server.py
docs/: README-original.md  architecture.md  capture-tech.md  current-scene.md  mvp-pipeline.md  quality-evaluation-strategy.md  regeneration-pipeline.md  synthesis.md
domain/: README.md  __init__.py  auth.py  calibration.py  enums.py  jobs.py  mapping.py  mapping_session.py  orchestration.py  reviews.py
frontend/: app.js  index.html  next.config.ts  package-lock.json  package.json  style.css
pipeline/: agent_calibrator.py  agent_reviewer.py  calibration_samples.py  evaluate.py  orchestrator.py  package.py  pose.py  pose_artifacts.py  preprocess.py  render_sim.py  retarget.py  staged_review.py
tests/: test_agent_calibrator.py  test_agent_reviewer.py  test_assistant_service.py  test_auth.py  test_calibration.py  test_llm_client.py  test_llm_probe.py  test_mapping_sessions.py  test_orchestration_service.py  test_pipeline.py  test_pose_real.py  test_retarget.py  (+2 more)
(+31 files in other folders)
